[Fix] inconsistent font size on mobile

--- a/src/public/static/css/translations.css
+++ b/src/public/static/css/translations.css
@@ -1,16 +1,31 @@
-#locale-picker {
+select#locale-picker {
 	position: relative;
 	top: 0.5em;
 	padding: 0.5em;
 	border-radius: 1em;
 }
 
-#translations {
+section#translations {
 	position: relative;
 	top: 2em;
 }
 
-.translations-group {
+div.translations-group-header {
+	position: relative;
+	display: flex;
+	margin: 0;
+	padding: 0.2em 0.5em;
+	background-color: #23272a;
+	border: 2px solid #1a1520;
+	border-radius: 1em;
+	cursor: pointer;
+}
+
+div.translations-group-header > div {
+	margin: 0.2em;
+}
+
+div.translations-group {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -20,20 +35,13 @@
 	padding: 0.5em;
 }
 
-.translations-group > h2 {
-	margin: 0;
-	padding: 0.2em 0.5em;
-	background-color: #23272a;
-	border: 2px solid #1a1520;
-	border-radius: 1em;
-	cursor: pointer;
-}
-
-.translations-group > p {
+div.translations-group > p {
 	margin: 0.5em;
+	font-size: small;
+	font-style: italic;
 }
 
-.translations-group > input[type='text'] {
+div.translations-group > input[type='text'] {
 	padding: 0.5em;
 	border-radius: 1em;
 	width: 98%;
